--- a/00_notebook_vierge.ipynb
+++ b/00_notebook_vierge.ipynb
@@ -105,7 +105,7 @@
    "source": [
     "L’objectif de cet exercice est d’essayer de prédire si un immeuble est de grande hauteur ou pas en fonction des coordonnées de type GPS (l’unité n’est pas connue). Quand les données ne sont pas connues elles ont été renseignées à 0.<br/><br/>\n",
     "Pour cela utiliser le fichier : data\\data_ex_2.csv<br/><br/>\n",
-    "Les trois questions devront être traitée par deux modèles ensemblistes.\n"
+    "La partie 2 doit être réalisée en utilisant 2 approches différentes de modélisations.\n"
    ]
   },
   {
@@ -160,7 +160,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##  <u>3ème partie :</u> Visualisation de données"
+    "##  <u>3ème partie :</u> SQL"
    ]
   },
   {
