--- a/00_notebook_vierge.ipynb
+++ b/00_notebook_vierge.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color=red>_L’ordre n’a pas d’importance, ce n’est pas grave non plus de ne pas finir toutes les parties._</font>\n"
+    "<font color=red>L’ordre n’a pas d’importance, ce n’est pas grave non plus de ne pas finir toutes les parties.</font>\n"
    ]
   },
   {
