--- a/00_notebook_vierge.ipynb
+++ b/00_notebook_vierge.ipynb
@@ -167,6 +167,116 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "L’objectif de cet exercice est de manipuler des sources de données SQL, merci de bien vouloir ouvrir le notebook SQL_test)"
+    "L’objectif de cet exercice est de Proposer une synthèse descriptive des données pour le fichier resultats-provisoires-par-canton.txt et resultats-provisoires-par-canton-light.txt (même répertoire)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### a.\tExclure de la visualisation les données 'Code du département','Libellé du département','Code du canton','Libellé du canton' et tout celles qui commencent par 'N°Liste','Libellé Abrégé Liste' ,'Libellé Etendu Liste' ,'Nom Tête de Liste' ."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On pourra renommer les colonnes avec la fonction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "import unicodedata\n",
+    "def nettoie_text(text):\n",
+    "    if (str(text)!='nan'):\n",
+    "        text = text.strip()\n",
+    "    else :\n",
+    "        text = ''\n",
+    "    text = text.lower()\n",
+    "    text = text.replace(')', ' ')\n",
+    "    text = text.replace('(', ' ')\n",
+    "    text = text.replace(',', ' ')\n",
+    "    text = text.replace('\\’', ' ')\n",
+    "    text = text.replace('\\'', ' ')\n",
+    "    text = text.replace(';', ' ')\n",
+    "    text = text.replace('\\n', ' ')\n",
+    "    text = text.replace('\\t', ' ')\n",
+    "    text = text.replace('-', ' ')\n",
+    "    text = text.replace('  ', ' ')\n",
+    "    text = unicodedata.normalize('NFD', text).encode('ascii', 'ignore') \n",
+    "    text = text.decode('utf-8')\n",
+    "    text = re.sub('[^A-Z\\' a-z 0-9]+', ' ', text)\n",
+    "    text = text.strip()\n",
+    "    return text\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### b.\tAprès avoir conservé uniquement les données générales <font color=blue>( Inscrits, Abstentions, % Abs/Ins, Votants, % Vot/Ins, Blancs, % Blancs/Ins, % Blancs/Vot, Nuls, % Nuls/Ins, % Nuls/Vot, Exprimés, % Exp/Ins, % Exp/Vot)</font> et celles de LOISEAU Nathalie n°5 et de BARDELLA Jordan n°23 <font color=blue>(Voix ,% Voix/Ins ,% Voix/Exp x)</font>, proposer une réduction de dimension afin de visualiser en 2 dimensions les données, avec les points libellés par département."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(Si jamais le traitement a et b vous prenaient trop de temps, utiliser le fichier resultats-provisoires-par-canton-light.txt)<br/><br/>\n",
+    "Essayer d’avoir quelque chose du genre :\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"data/visulisation.png\" title=\"visulisation\" />"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
+}
